Some fixes / styling

--- a/abitur-approval.html
+++ b/abitur-approval.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=435, user-scalable=yes">
     <title>Oberstufen-Modul</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <!-- CSS  -->
@@ -31,7 +31,7 @@
             <div id="courseCount" class="card darken-1">
                 <div class="card-content white-text">
                     <span class="card-title"><i class="fa criteria-icon"></i></span>
-                    <p>Du kannst mindestens 36 Kurse abgerechnen, in denen du insgesamt mindestens 200 Punkte erreicht hast.</p>
+                    <p>Du kannst mindestens 36 Kurse abrechnen, in denen du insgesamt mindestens 200 Punkte erreicht hast.</p>
                 </div>
             </div>
             <div id="underCourse" class="card darken-1">
@@ -49,13 +49,13 @@
             <div id="abiturMinSum" class="card darken-1">
                 <div class="card-content white-text">
                     <span class="card-title"><i class="fa criteria-icon"></i></span>
-                    <p>Du hast in deinen 5 Abiturfächern insgesamt mindestens 100 Punkte erreicht</p>
+                    <p>Du hast in deinen 5 Abiturfächern insgesamt mindestens 100 Punkte erreicht.</p>
                 </div>
             </div>
             <div id="abiturMinScores" class="card darken-1">
                 <div class="card-content white-text">
                     <span class="card-title"><i class="fa criteria-icon"></i></span>
-                    <p>Du hast in mindestens 3 deiner 5 Abiturfächern mindestens 20 Punkte erreicht.</p>
+                    <p>Du hast in mindestens 3 deiner 5 Abiturfächer mindestens 20 Punkte erreicht.</p>
                 </div>
             </div>
             <div id="buttonBar"class="row">
