--- a/abitur-input.html
+++ b/abitur-input.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=435, user-scalable=yes">
     <title>Oberstufen-Modul</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="prefetch" href="abitur-approval.html">
