--- a/abitur-selection.html
+++ b/abitur-selection.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=435, user-scalable=yes">
     <title>Oberstufen-Modul</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="prefetch" href="abitur-input.html">
@@ -27,7 +27,7 @@
         <div class="card-panel">
             <h1 class="header center orange-text"\>Wahl der Abiturfächer</h1>
             <div class="row center">
-                <h5 class="header col s12 light">Trage hier deine Wahl der Abiturfächer ein. Deine Eingaben können später nicht mehr geändert werden!</h5>
+                <h5 class="header col s12 light">Trage hier deine Wahl der Abiturfächer ein.</h5>
             </div>
             <br>
             <table>
