--- a/course-selection.html
+++ b/course-selection.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=435, user-scalable=yes">
     <title>Oberstufen-Modul</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="prefetch" href="certificate-input.html">
@@ -24,10 +24,10 @@
     </div>
     <div class="orange bg lighten-1"></div>
     <div id="body" class="container table-container animsition">
-        <div class="card-panel">
+        <div id="course-selection-panel" class="card-panel">
             <h1 class="header center orange-text">Kurswahl TG-Oberstufe</h1>
             <div class="row center">
-                <h5 class="header col s12 light">Trage hier deine Kurswahlen ein. Deine Eingaben können später nicht mehr geändert werden!</h5>
+                <h5 class="header col s12 light">Trage hier deine Kurswahlen ein.</h5>
             </div>
             <br>
             <h5 class="center">Sprachlich-literarisch-künstlerisches Aufgabenfeld</h5>
@@ -85,10 +85,10 @@
                 <tbody class="clickTable" table-name="AF2">
                 <tr class="static" item-name="GGK">
                     <td>Geschichte mit Gemeinschaftskunde</td>
-                    <td>X</td>
-                    <td>X</td>
-                    <td>X</td>
-                    <td>X</td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
                 </tr>
                 <tr table-group="2" item-name="RK">
                     <td>Religionslehre (rk)</td>
@@ -113,10 +113,10 @@
                 </tr>
                 <tr class="static" item-name="W">
                     <td>Wirtschaftslehre</td>
-                    <td>X</td>
-                    <td>X</td>
-                    <td>X</td>
-                    <td>X</td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
                 </tr>
             </table>
             <h5 class="center">Mathematisch-naturwissenschaftlich-technisches Aufgabenfeld</h5>
@@ -133,17 +133,17 @@
                 <tbody class="clickTable" table-name="AF3">
                 <tr class="static" item-name="PF">
                     <td>Profilfach</td>
-                    <td>X</td>
-                    <td>X</td>
-                    <td>X</td>
-                    <td>X</td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
                 </tr>
                 <tr class="static" item-name="M">
                     <td>Mathematik</td>
-                    <td>X</td>
-                    <td>X</td>
-                    <td>X</td>
-                    <td>X</td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
                 </tr>
                 <tr table-group="3" item-name="CH">
                     <td>Chemie</td>
