--- a/course-selection.html
+++ b/course-selection.html
@@ -44,10 +44,10 @@
                 <tbody class="clickTable" table-name="AF1">
                 <tr class="static" item-name="D">
                     <td>Deutsch</td>
-                    <td>X</td>
-                    <td>X</td>
-                    <td>X</td>
-                    <td>X</td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
+                    <td><i class='fa fa-times fa-2x'></i></td>
                 </tr>
                 <tr table-group="5" item-name="EA">
                     <td>Englisch / Niveau A</td>
