Added support for vocal exams

--- a/abitur-input.html
+++ b/abitur-input.html
@@ -36,6 +36,7 @@
                     <th>Prüfungsfach</th>
                     <th width="60%">Name</th>
                     <th>Punkte</th>
+                    <th>Mündliche Prüfung (optinoal)</th>
                 </tr>
                 </thead>
                 <tbody class="clickTable"/>
