Workaround! Should work now, but needs to be fixed later.

--- a/abitur-input.html
+++ b/abitur-input.html
@@ -36,7 +36,7 @@
                     <th>Prüfungsfach</th>
                     <th width="60%">Name</th>
                     <th>Punkte</th>
-                    <th>Mündliche Prüfung (optinoal)</th>
+                    <th>Mündliche Prüfung (optional)</th>
                 </tr>
                 </thead>
                 <tbody class="clickTable"/>
