--- a/certificate-input.html
+++ b/certificate-input.html
@@ -15,7 +15,7 @@
     <div id="header">
         <nav class="orange darken-2" role="navigation">
             <div class="nav-wrapper container">
-                <a id="logo-container" href="#" class="brand-logo">Setup</a>
+                <a id="logo-container" href="#" class="brand-logo">CBS OM</a>
                 <ul id="nav-mobile" class="right">
                     <li id="save" class="hand-cursor"><a class="fa fa-floppy-o fa-2x" download="Profile.omp"></a> </li>
                 </ul>
