--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="header">
         <nav class="orange darken-2" role="navigation">
             <div class="nav-wrapper container">
-                <a id="logo-container" href="#" class="brand-logo">Setup</a>
+                <a id="logo-container" href="#" class="brand-logo">CBS OM</a>
             </div>
         </nav>
     </div>
